lib_LTLIBRARIES = libSDL++.la
libSDL___la_SOURCES = \
											cdrom.cpp \
											condition.cpp \
											cursor.cpp \
											event.cpp \
											events.cpp \
											joystick.cpp \
											mutex.cpp \
											overlay.cpp \
											rw_ops.cpp \
											semaphore.cpp \
											surface.cpp


libSDL___la_CPPFLAGS = \
											 -Wall \
											 -Wextra \
											 -I$(top_srcdir)/include \
											 `sdl-config --cflags`
pkginclude_HEADERS = \
										 $(top_srcdir)/include/SDL++/callback.hpp \
										 $(top_srcdir)/include/SDL++/cdrom.hpp \
										 $(top_srcdir)/include/SDL++/color.hpp \
										 $(top_srcdir)/include/SDL++/condition.hpp \
										 $(top_srcdir)/include/SDL++/cursor.hpp \
										 $(top_srcdir)/include/SDL++/EventDispatcher.hpp \
										 $(top_srcdir)/include/SDL++/Event.hpp \
										 $(top_srcdir)/include/SDL++/EventListener.hpp \
										 $(top_srcdir)/include/SDL++/joystick.hpp \
										 $(top_srcdir)/include/SDL++/LibraryEventDispatcher.hpp \
										 $(top_srcdir)/include/SDL++/LibraryEventListener.hpp \
										 $(top_srcdir)/include/SDL++/mutex.hpp \
										 $(top_srcdir)/include/SDL++/overlay.hpp \
										 $(top_srcdir)/include/SDL++/pixel_format.hpp \
										 $(top_srcdir)/include/SDL++/rect.hpp \
										 $(top_srcdir)/include/SDL++/rw_ops.hpp \
										 $(top_srcdir)/include/SDL++/SDLLibrary.hpp \
										 $(top_srcdir)/include/SDL++/semaphore.hpp \
										 $(top_srcdir)/include/SDL++/shared_ptr_base.hpp \
										 $(top_srcdir)/include/SDL++/surface.hpp \
										 $(top_srcdir)/include/SDL++/task.hpp \
										 $(top_srcdir)/include/SDL++/thread.hpp \
										 $(top_srcdir)/include/SDL++/time.hpp \
										 $(top_srcdir)/include/SDL++/timer.hpp
